Fixed bug #36208 (symbol namespace conflicts using bundled gd).  (Jakub Moc)